tests happier, structure problem fixed by manually placing a structure block in world